feat: - currency swagger docs updated
